feat: add flex to  main

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,15 @@ body {
   font-family: "_Lato_";
 }
 
+.ibg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.ibg img {
+  display: none;
+}
+
 .wrapper {
   overflow: hidden;
   min-height: 100%;
