--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,9 @@
 $fontfamily: '_Lato_';
 $minwidth: 320px;
 @import 'null.scss';
+@import 'ui.scss';
+@import 'header.scss';
+@import 'footer.scss';
 
 .wrapper {
   overflow: hidden;
@@ -10,4 +13,21 @@ $minwidth: 320px;
 .container {
   max-width: 1130px; //margin 0 15
   padding: 0px 15px;
+}
+
+.page {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  @include flexbox();
+  flex-direction: column;
+}
+.main-screen {
+  flex: 1 0 100%;
+  &__bg {
+  }
+}
+.content {
 }
