--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,79 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+* {
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+}
+
 *,
-*:after,
-*:before {
-  padding: 0;
-  margin: 0;
-  border: 0;
+*:before,
+*:after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+:focus,
+:active {
+  outline: none;
+}
+
+a:focus,
+a:active {
+  outline: none;
+}
+
+aside,
+nav,
+footer,
+header,
+section {
+  display: block;
+}
+
+html,
+body {
+  height: 100%;
+  min-width: 320px;
+}
+
+body {
+  line-height: 1;
+  font-size: 14px;
+  font-family: 'Lato';
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+  font-family: 'Lato';
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
 }
 
 a,
-a:hover,
 a:visited {
   text-decoration: none;
 }
 
-ul,
-li,
-ol {
+a:hover {
+  text-decoration: none;
+}
+
+ul li {
   list-style: none;
 }
 
@@ -35,18 +91,6 @@ h6 {
   font-size: inherit;
 }
 
-body,
-html {
-  height: 100%;
-  min-width: 320px;
-}
-
-body {
-  line-height: 1;
-  font-size: 14px;
-  font-family: "_Lato_";
-}
-
 .ibg {
   background-repeat: no-repeat;
   background-size: cover;
@@ -54,6 +98,56 @@ body {
 }
 .ibg img {
   display: none;
+}
+
+.header {
+  position: absolute;
+  width: 100%;
+  z-index: 50;
+  left: 0px;
+  top: 35px;
+}
+.header__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 85px;
+}
+.header__logo {
+  position: absolute;
+  left: 50%;
+  top: 0px;
+  transform: translate3d(-50%, 0px, 0px);
+  -webkit-transform: translate3d(-50%, 0px, 0px);
+  -ms-transform: translate3d(-50%, 0px, 0px);
+  -o-transform: translate3d(-50%, 0px, 0px);
+}
+
+.menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0px;
+}
+.menu__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0px;
+  font-size: 13px;
+  color: #4d4959;
+  text-transform: uppercase;
+  line-height: 1.2;
+  font-weight: 700;
+  letter-spacing: 2.6;
+  font-family: 'Lato';
 }
 
 .wrapper {
@@ -78,14 +172,14 @@ body {
   font-size: 0px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .main-screen {
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 100%;
-          flex: 1 0 100%;
+  -ms-flex: 1 0 100%;
+  flex: 1 0 100%;
   position: relative;
 }
 .main-screen__bg {
