--- a/src/scss/null.scss
+++ b/src/scss/null.scss
@@ -1,19 +1,66 @@
+* {
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+}
 *,
-*:after,
-*:before {
-  padding: 0;
-  margin: 0;
-  border: 0;
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+:focus,
+:active {
+  outline: none;
+}
+a:focus,
+a:active {
+  outline: none;
+}
+aside,
+nav,
+footer,
+header,
+section {
+  display: block;
+}
+html,
+body {
+  height: 100%;
+  min-width: $minwidth;
+}
+body {
+  line-height: 1;
+  font-size: 14px;
+  font-family: $fontfamily;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+input,
+button,
+textarea {
+  font-family: $fontfamily;
+}
+input::-ms-clear {
+  display: none;
+}
+button {
+  cursor: pointer;
+}
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
 a,
-a:hover,
 a:visited {
   text-decoration: none;
 }
-ul,
-li,
-ol {
+a:hover {
+  text-decoration: none;
+}
+ul li {
   list-style: none;
 }
 img {
@@ -28,13 +75,5 @@ h6 {
   font-weight: inherit;
   font-size: inherit;
 }
-body,
-html {
-  height: 100%;
-  min-width: $minwidth;
-}
-body {
-  line-height: 1;
-  font-size: 14px;
-  font-family: $fontfamily;
-}
+//-webkit-overflow-scrolling: touch;
+//animation-play-state: paused !important;
