--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,14 +1,9 @@
+@import 'mixins.scss';
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
 
-$fontfamily: '_Lato_';
+$fontfamily: 'Lato';
 $minwidth: 320px;
-
 @import 'null.scss';
-@import 'ui.scss';
-@import 'mixins.scss';
-
-//@import 'header.scss';
-//@import 'footer.scss';
 
 .wrapper {
   overflow: hidden;
@@ -18,6 +13,9 @@ $minwidth: 320px;
   max-width: 1130px;
   padding: 0px 15px;
 }
+
+@import 'header.scss';
+@import 'ui.scss';
 
 .page {
   position: absolute;
