--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap");
 * {
   padding: 0px;
   margin: 0px;
@@ -39,7 +39,7 @@ body {
 body {
   line-height: 1;
   font-size: 14px;
-  font-family: 'Lato';
+  font-family: "Lato";
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -48,7 +48,7 @@ body {
 input,
 button,
 textarea {
-  font-family: 'Lato';
+  font-family: "Lato";
 }
 
 input::-ms-clear {
@@ -91,6 +91,16 @@ h6 {
   font-size: inherit;
 }
 
+.wrapper {
+  overflow: hidden;
+  min-height: 100%;
+}
+
+.container {
+  max-width: 1130px;
+  padding: 0px 15px;
+}
+
 .ibg {
   background-repeat: no-repeat;
   background-size: cover;
@@ -104,62 +114,206 @@ h6 {
   position: absolute;
   width: 100%;
   z-index: 50;
-  left: 0px;
+  left: 0;
   top: 35px;
 }
 .header__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 0px;
+  font-size: 0;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 85px;
 }
 .header__logo {
   position: absolute;
   left: 50%;
-  top: 0px;
+  top: 0;
+  z-index: 2;
   transform: translate3d(-50%, 0px, 0px);
   -webkit-transform: translate3d(-50%, 0px, 0px);
   -ms-transform: translate3d(-50%, 0px, 0px);
   -o-transform: translate3d(-50%, 0px, 0px);
+  -moz-transform: translate3d(-50%, 0px, 0px);
+}
+@media (max-width: 767px) {
+  .header {
+    top: 15px;
+  }
 }
 
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 0px;
+  font-size: 0;
+}
+.menu__list li {
+  position: relative;
+  padding: 0px 37.5px;
+}
+.menu__list li:nth-child(2) {
+  padding: 0px 110px 0px 37.5px;
+}
+.menu__list li:nth-child(3) {
+  padding: 0px 37.5px 0px 110px;
+}
+.menu__list li:after {
+  content: "";
+  width: 2px;
+  height: 2px;
+  background-color: #4d4959;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  margin: -1.5px 0px 0px 0px;
+}
+.menu__list li:nth-child(2):after, .menu__list li:last-child:after {
+  display: none;
 }
 .menu__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-size: 0px;
-  font-size: 13px;
   color: #4d4959;
-  text-transform: uppercase;
-  line-height: 1.2;
+  font-size: 13px;
   font-weight: 700;
-  letter-spacing: 2.6;
-  font-family: 'Lato';
+  text-transform: uppercase;
+  letter-spacing: 2.6px;
+}
+@media (max-width: 767px) {
+  .menu__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: auto;
+    background-color: #4d4959;
+    padding: 150px 0px 20px 0px;
+    transform: translate3d(0px, -100%, 0px);
+    -webkit-transform: translate3d(0px, -100%, 0px);
+    -ms-transform: translate3d(0px, -100%, 0px);
+    -o-transform: translate3d(0px, -100%, 0px);
+    -moz-transform: translate3d(0px, -100%, 0px);
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .menu__body.active {
+    transform: translate3d(0px, 0px, 0px);
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    -ms-transform: translate3d(0px, 0px, 0px);
+    -o-transform: translate3d(0px, 0px, 0px);
+    -moz-transform: translate3d(0px, 0px, 0px);
+  }
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .menu__list li {
+    padding: 0 0 45px 0;
+  }
+  .menu__list li:nth-child(2), .menu__list li:nth-child(3) {
+    padding: 0 0 45px 0;
+  }
+  .menu__list li:nth-child(2):after, .menu__list li:nth-child(3):after {
+    display: block;
+  }
+  .menu__list li:last-child {
+    padding: 0;
+  }
+  .menu__list li:after {
+    width: 4px;
+    height: 4px;
+    background-color: #fff;
+    right: 50%;
+    top: 40px;
+    margin: 0px -2px 0px 0px;
+  }
+  .menu__link {
+    color: #fff;
+    font-size: 20px;
+  }
 }
 
-.wrapper {
-  overflow: hidden;
-  min-height: 100%;
+@media (max-width: 767px) {
+  .icon-menu {
+    display: block;
+    position: absolute;
+    top: 33px;
+    right: 15px;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+  }
+  .icon-menu span {
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    top: 8px;
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #4d4959;
+  }
+  .icon-menu span:first-child {
+    top: 0px;
+  }
+  .icon-menu span:last-child {
+    top: auto;
+    bottom: 0px;
+  }
+  .icon-menu.active span {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    background-color: #fff;
+  }
+  .icon-menu.active span:first-child {
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 8px;
+  }
+  .icon-menu.active span:last-child {
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    bottom: 8px;
+  }
 }
 
-.container {
-  max-width: 1130px;
-  padding: 0px 15px;
-}
-
+/*
+	.header-menu__icon{
+		display: block;
+		position: absolute;
+		top: 18px;
+		right: 10px;
+		width:30px;
+		height: 18px;
+		cursor: pointer;
+		z-index: 5;
+		span{@include anim(0.3s,0s);top: 8px;left: 0px;position: absolute;width: 100%;height: 2px;background-color: #000;
+			&:first-child{top: 0px;}
+			&:last-child{top: auto;bottom: 0px;}
+		}
+		&.active{
+			span{@include scale(0);
+				&:first-child{@include rotate(-45deg);top: 8px;}
+				&:last-child{@include rotate(45deg);bottom: 8px;}
+			}
+		}
+	}
+*/
 .page {
   position: absolute;
   width: 100%;
@@ -169,17 +323,17 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 0px;
+  font-size: 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .main-screen {
   -webkit-box-flex: 1;
-  -ms-flex: 1 0 100%;
-  flex: 1 0 100%;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
   position: relative;
 }
 .main-screen__bg {
