--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,15 +1,21 @@
+//====================================================================================================
 .header {
   position: absolute;
   width: 100%;
   z-index: 50;
   left: 0;
   top: 35px;
+  // .header__row
   &__row {
     @include flexbox();
     justify-content: center;
     align-items: center;
     height: 85px;
   }
+  // .header__menu
+  &__menu {
+  }
+  // .header__logo
   &__logo {
     position: absolute;
     left: 50%;
@@ -22,6 +28,13 @@
   }
 }
 .menu {
+  // .menu__icon
+  &__icon {
+  }
+  // .menu__body
+  &__body {
+  }
+  // .menu__list
   &__list {
     @include flexbox();
     li {
@@ -52,6 +65,7 @@
       }
     }
   }
+  // .menu__link
   &__link {
     color: #4d4959;
     font-size: 13px;
