--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ h6 {
 .container {
   max-width: 1130px;
   padding: 0px 15px;
+  margin: 0px auto;
 }
 
 .ibg {
@@ -352,4 +353,40 @@ h6 {
 
 .content {
   font-size: 20px;
+}
+
+/*   generation   */
+.generation {
+  padding: 120px 0px;
+  background-color: #f7f7f7;
+}
+@media (max-width: 900px) {
+  .generation {
+    padding: 80px 0px;
+  }
+}
+@media (max-width: 600px) {
+  .generation {
+    padding: 30px 0px;
+  }
+}
+
+.block {
+  text-align: center;
+}
+.block__icon {
+  margin: 0px 0px 30px 0px;
+}
+.block__title {
+  font-size: 18px;
+  color: #353738;
+  text-transform: uppercase;
+  line-height: 1.2;
+  letter-spacing: 3.6px;
+  margin: 0px 0px 18px 0px;
+}
+.block__text {
+  font-size: 18px;
+  color: #848789;
+  line-height: 1.889;
 }
