--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@ $minwidth: 320px;
 .container {
   max-width: 1130px;
   padding: 0px 15px;
+  margin: 0px auto;
 }
 
 @import 'ui.scss';
@@ -41,4 +42,38 @@ $minwidth: 320px;
 }
 .content {
   font-size: 20px;
+}
+/*   generation   */
+.generation {
+  padding: 120px 0px;
+  background-color: #f7f7f7;
+  &__block {
+  }
+  @media (max-width: 900px) {
+    padding: 80px 0px;
+  }
+
+  @media (max-width: 600px) {
+    padding: 30px 0px;
+  }
+}
+
+.block {
+  text-align: center;
+  &__icon {
+    margin: 0px 0px 30px 0px;
+  }
+  &__title {
+    font-size: 18px;
+    color: rgb(53, 55, 56);
+    text-transform: uppercase;
+    line-height: 1.2;
+    letter-spacing: 3.6px;
+    margin: 0px 0px 18px 0px;
+  }
+  &__text {
+    font-size: 18px;
+    color: rgb(132, 135, 137);
+    line-height: 1.889;
+  }
 }
