--- a/css/style.css
+++ b/css/style.css
@@ -390,3 +390,92 @@ h6 {
   color: #848789;
   line-height: 1.889;
 }
+.block__text_justify {
+  text-align: justify;
+  font-size: 16px;
+  line-height: 30px;
+}
+.block__text_justify:after {
+  content: "";
+  background-color: #ebebeb;
+  display: block;
+  width: 50px;
+  height: 1px;
+  margin: 35px auto 0px auto;
+}
+
+/*   brands   */
+.brands__row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  font-size: 0;
+}
+.brands__column {
+  flex: 0 1 33.333%;
+}
+.brands__column_b {
+  flex: 0 1 66.667%;
+}
+.brands__content {
+  position: relative;
+  padding: 70px 65px 55px 65px;
+}
+.brands__content:after {
+  content: "";
+  bottom: -10px;
+  left: 50%;
+  margin: 0px 0px 0px -10px;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #fff;
+  position: absolute;
+}
+.brands__image {
+  padding: 0px 0px 37.51% 0px;
+}
+
+.item {
+  display: block;
+  position: relative;
+  height: 100%;
+}
+.item__logo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  font-size: 0;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  background-color: rgba(100, 194, 158, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -ms-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.item__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+}
+.item:hover .item__logo {
+  opacity: 1;
+  visibility: visible;
+}
