--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -75,5 +75,88 @@ $minwidth: 320px;
     font-size: 18px;
     color: rgb(132, 135, 137);
     line-height: 1.889;
+    &_justify {
+      text-align: justify;
+      font-size: 16px;
+      line-height: 30px;
+
+      &:after {
+        content: '';
+        background-color: #ebebeb;
+        display: block;
+        width: 50px;
+        height: 1px;
+        margin: 35px auto 0px auto;
+      }
+    }
+  }
+}
+
+/*   brands   */
+
+.brands {
+  //margin: 70px 0px 40px 0px;
+  &__row {
+    @include flexbox();
+  }
+  &__column {
+    flex: 0 1 33.333%;
+    &_b {
+      flex: 0 1 66.667%;
+    }
+  }
+  &__item {
+  }
+  &__content {
+    position: relative;
+    padding: 70px 65px 55px 65px;
+    &:after {
+      content: '';
+      bottom: -10px;
+      left: 50%;
+      margin: 0px 0px 0px -10px;
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 10px solid #fff;
+      position: absolute;
+    }
+  }
+  &__image {
+    padding: 0px 0px 37.51% 0px;
+  }
+}
+.item {
+  display: block;
+  position: relative;
+  height: 100%;
+  &__logo {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    @include flexbox();
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    background-color: rgba(100, 194, 158, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    @include anim(0.3s, 0s);
+  }
+  &__image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+  }
+  &:hover {
+    .item__logo {
+      opacity: 1;
+      visibility: visible;
+    }
   }
 }
