--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,11 @@ h6 {
   height: 1px;
   margin: 35px auto 0px auto;
 }
+@media (max-width: 1500px) {
+  .block__text_justify:after {
+    margin: 15px auto 0px auto;
+  }
+}
 
 /*   brands   */
 .brands__row {
@@ -437,6 +442,16 @@ h6 {
 }
 .brands__image {
   padding: 0px 0px 37.51% 0px;
+}
+@media (max-width: 1500px) {
+  .brands__content {
+    padding: 40px 35px 30px 35px;
+  }
+}
+@media (max-width: 1100px) {
+  .brands__row {
+    flex-direction: column;
+  }
 }
 
 .item {
@@ -478,4 +493,10 @@ h6 {
 .item:hover .item__logo {
   opacity: 1;
   visibility: visible;
+}
+@media (max-width: 1100px) {
+  .item {
+    height: auto;
+    padding: 0px 0px 70% 0px;
+  }
 }
