--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -90,6 +90,15 @@ $minwidth: 320px;
       }
     }
   }
+  @media (max-width: 1500px) {
+    &__text {
+      &_justify {
+        &:after {
+          margin: 15px auto 0px auto;
+        }
+      }
+    }
+  }
 }
 
 /*   brands   */
@@ -126,6 +135,16 @@ $minwidth: 320px;
   &__image {
     padding: 0px 0px 37.51% 0px;
   }
+  @media (max-width: 1500px) {
+    &__content {
+      padding: 40px 35px 30px 35px;
+    }
+  }
+  @media (max-width: 1100px) {
+    &__row {
+      flex-direction: column;
+    }
+  }
 }
 .item {
   display: block;
@@ -158,5 +177,9 @@ $minwidth: 320px;
       opacity: 1;
       visibility: visible;
     }
+  }
+  @media (max-width: 1100px) {
+    height: auto;
+    padding: 0px 0px 70% 0px;
   }
 }
