--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,20 @@ h6 {
 }
 
 /*   brands   */
+.brands_rev .brands__column {
+  -webkit-box-ordinal-group: 1;
+  -moz-box-ordinal-group: 1;
+  -ms-flex-order: 1;
+  -webkit-order: 1;
+  order: 1;
+}
+.brands_rev .brands__column_b {
+  -webkit-box-ordinal-group: 2;
+  -moz-box-ordinal-group: 2;
+  -ms-flex-order: 2;
+  -webkit-order: 2;
+  order: 2;
+}
 .brands__row {
   display: -webkit-box;
   display: -moz-box;
