--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -104,7 +104,14 @@ $minwidth: 320px;
 /*   brands   */
 
 .brands {
-  //margin: 70px 0px 40px 0px;
+  &_rev {
+    .brands__column {
+      @include flexorder(1);
+      &_b {
+        @include flexorder(2);
+      }
+    }
+  }
   &__row {
     @include flexbox();
   }
