--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -112,6 +112,8 @@ $minwidth: 320px;
       }
     }
   }
+  &_last {
+  }
   &__row {
     @include flexbox();
   }
@@ -150,6 +152,19 @@ $minwidth: 320px;
   @media (max-width: 1100px) {
     &__row {
       flex-direction: column;
+    }
+    &_last {
+      .brands__column {
+        &:nth-child(1) {
+          @include flexorder(2);
+        }
+        &:nth-child(2) {
+          @include flexorder(1);
+        }
+        &:nth-child(3) {
+          @include flexorder(3);
+        }
+      }
     }
   }
 }
