feat: add html for shop

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -239,3 +239,27 @@ $minwidth: 320px;
     font-style: italic;
   }
 }
+
+/*   shop   */
+.shop {
+  &__body {
+  }
+  &__column {
+    &_b {
+    }
+  }
+  &__block {
+  }
+  &__footer {
+  }
+}
+.block-shop {
+  &__row {
+  }
+  &__column {
+  }
+  &__item {
+  }
+}
+.btn {
+}
