--- a/css/style.css
+++ b/css/style.css
@@ -557,6 +557,7 @@ h6 {
   display: -webkit-flex;
   display: flex;
   font-size: 0;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 2;
@@ -568,6 +569,14 @@ h6 {
   -ms-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
+}
+.item__logo span {
+  margin: 10px 0px 0px 0px;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 2.8px;
+  text-transform: uppercase;
+  color: #fff;
 }
 .item__image {
   position: absolute;
