--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -179,6 +179,7 @@ $minwidth: 320px;
     top: 0px;
     left: 0px;
     @include flexbox();
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     z-index: 2;
@@ -186,6 +187,14 @@ $minwidth: 320px;
     opacity: 0;
     visibility: hidden;
     @include anim(0.3s, 0s);
+    span {
+      margin: 10px 0px 0px 0px;
+      font-size: 14px;
+      font-weight: 700;
+      letter-spacing: 2.8px;
+      text-transform: uppercase;
+      color: #fff;
+    }
   }
   &__image {
     position: absolute;
@@ -207,6 +216,7 @@ $minwidth: 320px;
 }
 
 /*   slider   */
+
 .slider {
   background-color: rgb(247, 247, 247);
   padding: 120px 0px 60px 0px;
