--- a/css/style.css
+++ b/css/style.css
@@ -642,6 +642,7 @@ h6 {
 .shop__column_b {
   flex: 0 1 33.333%;
 }
+
 .shop__body {
   display: -webkit-box;
   display: -moz-box;
@@ -717,4 +718,75 @@ h6 {
 }
 .block-shop__item_l {
   padding: 0px 0px 100% 0px;
+}
+
+.subscribe__body {
+  padding: 110px 0;
+  max-width: 534px;
+  margin: 0px auto;
+  text-align: center;
+}
+.subscribe__logo {
+  margin: 0px 0px 39px 0px;
+}
+.subscribe__label {
+  color: #848789;
+  font-size: 24px;
+  font-style: italic;
+  margin: 0px 0px 35px 0px;
+}
+.subscribe__form {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  font-size: 0;
+}
+.subscribe__input {
+  flex: 1 1 auto;
+  padding: 0px 8px 0px 0px;
+}
+.subscribe__input .input {
+  width: 100%;
+  height: 69px;
+  border: 1px solid #d3d7d9;
+  background-color: #ffffff;
+  padding: 0px 28px;
+  color: #929292;
+  font-size: 20px;
+  font-style: italic;
+}
+.subscribe__input .input.focus {
+  font-style: normal;
+  color: #333;
+}
+.subscribe__input .input.err {
+  border: 1px solid red;
+}
+.subscribe__button {
+  flex: 0 0 126px;
+}
+.subscribe__btn {
+  width: 100%;
+  height: 69px;
+  line-height: 69px;
+  color: #fff;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 300;
+  background-color: #64c29e;
+}
+@media (max-width: 750px) {
+  .subscribe__body {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 500px) {
+  .subscribe__form {
+    display: block;
+  }
+  .subscribe__input {
+    padding: 0px 0px 8px 0px;
+  }
 }
