--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,8 +47,6 @@ $minwidth: 320px;
 .generation {
   padding: 120px 0px;
   background-color: #f7f7f7;
-  &__block {
-  }
   @media (max-width: 900px) {
     padding: 80px 0px;
   }
@@ -108,8 +106,6 @@ $minwidth: 320px;
         @include flexorder(2);
       }
     }
-  }
-  &_last {
   }
   &__row {
     @include flexbox();
@@ -250,10 +246,6 @@ $minwidth: 320px;
       flex: 0 1 33.333%;
     }
   }
-  &__block {
-  }
-  &__footer {
-  }
 }
 .shop {
   &__body {
@@ -282,7 +274,6 @@ $minwidth: 320px;
     text-transform: uppercase;
     border: 1px solid rgba(255, 255, 255, 0.5);
   }
-
   @media (max-width: 1100px) {
     &__body {
       flex-wrap: wrap;
@@ -320,6 +311,73 @@ $minwidth: 320px;
     }
     &_l {
       padding: 0px 0px 100% 0px;
+    }
+  }
+}
+.subscribe {
+  &__body {
+    padding: 110px 0;
+    max-width: 534px;
+    margin: 0px auto;
+    text-align: center;
+  }
+  &__logo {
+    margin: 0px 0px 39px 0px;
+  }
+  &__label {
+    color: #848789;
+    font-size: 24px;
+    font-style: italic;
+    margin: 0px 0px 35px 0px;
+  }
+  &__form {
+    @include flexbox();
+  }
+  &__input {
+    flex: 1 1 auto;
+    padding: 0px 8px 0px 0px;
+    .input {
+      width: 100%;
+      height: 69px;
+      border: 1px solid #d3d7d9;
+      background-color: #ffffff;
+      padding: 0px 28px;
+      color: #929292;
+      font-size: 20px;
+      font-style: italic;
+      &.focus {
+        font-style: normal;
+        color: #333;
+      }
+      &.err {
+        border: 1px solid red;
+      }
+    }
+  }
+  &__button {
+    flex: 0 0 126px;
+  }
+  &__btn {
+    width: 100%;
+    height: 69px;
+    line-height: 69px;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 300;
+    background-color: #64c29e;
+  }
+  @media (max-width: 750px) {
+    &__body {
+      padding: 50px 0;
+    }
+  }
+  @media (max-width: 500px) {
+    &__form {
+      display: block;
+    }
+    &__input {
+      padding: 0px 0px 8px 0px;
     }
   }
 }
